--- a/css/kharjat.css
+++ b/css/kharjat.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Madimi+One&family=Pacifico&family=Reddit+Sans:ital,wght@0,200..900;1,200..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 
+#special-text {
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+}
+
 #check-offer {
     border-radius: 15px;
     font-size: 15px;
@@ -40,6 +47,9 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+
+
 
 @media screen and (max-width: 900px) {
     .kherjat {
