--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ svg{
 footer{
     margin: 0;
     background-color: #4d869c;
-    padding-top: 40px;
+    padding-top: 20px;
     padding-bottom: 25px;
     
 }
@@ -361,13 +361,12 @@ input{
 }
 .section-link{
     display: flex;
+    justify-content: space-around;
     gap: 100px;
     align-items: center;
-    padding-top: 70px;
+    padding-top: 10px;
     padding-left: 24px;
     padding-bottom: 38px;
-    margin-left: 24%; 
-    margin-right: 24.3%;
     color: white;
     border-bottom: 2px solid rgba(255, 255, 255, 0.644);
 
